--- a/themes/blackburn/static/css/blackburn.css
+++ b/themes/blackburn/static/css/blackburn.css
@@ -8,7 +8,9 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .header {
