--- a/themes/blackburn/static/css/blackburn.css
+++ b/themes/blackburn/static/css/blackburn.css
@@ -8,6 +8,8 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
+  max-width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
@@ -69,6 +71,7 @@ a:visited {
   font-family: 'Raleway';
   font-size: 0.75em;
   margin: 0.6em;
+  color: #808080;
 }
 
 .post-meta {
