change codes' font

--- a/themes/blackburn/static/css/blackburn.css
+++ b/themes/blackburn/static/css/blackburn.css
@@ -97,6 +97,11 @@ a:visited {
   font-weight: bold;
 }
 
+code {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 85%;
+}
+
 article > header {
   font-family: 'Raleway', 'Nanum Gothic', sans-serif;
 }
