--- a/themes/blackburn/layouts/partials/head.html
+++ b/themes/blackburn/layouts/partials/head.html
@@ -36,10 +36,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Raleway|Roboto+Mono" rel="stylesheet">
   <!--
   font-family: 'Nanum Gothic', san-serif;
   font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   -->
   
   <!-- MathJax -->
