--- a/themes/blackburn/static/css/blackburn.css
+++ b/themes/blackburn/static/css/blackburn.css
@@ -13,6 +13,7 @@ html, body {
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
+  font-size: 100%;
 }
 
 .header {
@@ -76,7 +77,7 @@ a:visited {
 
 .post-meta {
   font-family: 'Raleway', 'Nanum Gothic', sans-serif;
-  font-size: 90%;
+  font-size: 0.9em;
 }
 
 .content {
@@ -88,8 +89,8 @@ a:visited {
   -webkit-margin-after: 1em;
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
-  padding-left: 15px;
-  border-left: 5px solid #cccccc;
+  padding-left: 1em;
+  border-left: 0.2em solid #cccccc;
   color: #999;
   /*
   font-style: italic;
@@ -97,9 +98,17 @@ a:visited {
   font-weight: bold;
 }
 
-code {
+code,
+.highlight > pre {
   font-family: 'Roboto Mono', monospace;
-  font-size: 85%;
+  font-size: 0.9em;
+}
+
+.highlight > pre {
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
 }
 
 article > header {
