--- a/themes/blackburn/static/css/blackburn.css
+++ b/themes/blackburn/static/css/blackburn.css
@@ -44,6 +44,21 @@ a:visited {
 }
 */
 
+#mask {  
+  position: fixed;  
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100; /* menu and button are 1000 */ 
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: none;  
+}
+
+#mask.active {
+  display: block;
+}
+
 #main a {
   position: relative;
 }
